2005-11-14 Karsten Behrmann <BearPerson@sourcemage.org>
	* network, 30spellinstall: add hostname to /etc/hosts (bug 10080)
	* skeleton/etc/hosts: deleted, is provided by netkit-base

2005-11-09 Karsten Behrmann <BearPerson@sourcemage.org>
	* diskStructure: attempt to give more info for partitions
	* diskStructure: fix bug 9764

2005-11-07 Karsten Behrmann <BearPerson@sourcemage.org>
	* iso.packages, architecture: don't configure in chroot; fix bug 8757
	* 10common, architecture: weaken dependencies
	* installer.sh: remove $FINALFILES content during fixup

2005-11-06 Karsten Behrmann <BearPerson@sourcemage.org>
	* bootloader, network, syslog: use "remembering" menus

2005-11-06 Karsten Behrmann <BearPerson@sourcemage.org>
	* 10common: add routines for a "default remembering" menu
	* debug, bootloader, diskStructure, network:
	  fix local VAR=$(cmd) && brokenness
	* nativeLanguageSupport: use default menu stuff

2005-11-05 Karsten Behrmann <BearPerson@sourcemage.org>
	* initrd/sbin/smgl.init: fix indent, clean up, make module menu
	                         not return on loading a module (bug 7806)
	* mkiso, nativeLanguageSupport, timezone: pre-generate lists (bug 7853)

2005-11-03 Karsten Behrmann <BearPerson@sourcemage.org>
	* network: fix up ppp settings, no longer use /dev/modem symlink

2005-10-30 Karsten Behrmann <BearPerson@sourcemage.org>
	* skeleton/etc/login-shell.sh: remove error from dircolors, cd to /
	* skeleton/etc/{hosts,hostname}: shorten hostname
	* bg-install.sh, installer.sh: move vars around, cleanup unused stuff
	* smgl.install/default_debug_spellinstall: debug spell installation
	* 10common: cleanup dialog
	* 30spellinstall, kernel: extend debugging
	* modules/debug: cleanup and locking
	* bootloader: use ISO-generation-time set kernel version
	* $STATE_DIR/version: add generation-set kernel version

2005-10-17 Karsten Behrmann <BearPerson@sourcemage.org>
	* modules/debug: added debugging menu